[BZ 820570] fix a bug in the original fix, which caused an "IllegalArgumentException: URI is not absolute" error when trying to parse a -P option value that was a relative path (https://bugzilla.redhat.com/show_bug.cgi?id=820570) (cherry picked from commit e9c19a7698a7eef468e9e184d7e8a75a78670751)